--- a/index.html
+++ b/index.html
@@ -1,1 +1,51 @@
-wellcome
+
+
+<style>
+.simpleTab{margin:20px auto;}.simpleTab ul.tab-wrappers{margin:0;padding:0;height: ;line-height:30px;}.simpleTab ul.tab-wrappers li{margin:0;padding:0;float:left;list-style:none;display:inline;}.simpleTab ul.tab-wrappers li a{margin-right:2px;display:block;padding:0 15px;background-color:#000000;color:#cccccc;text-decoration:none;border-bottom:none;position:relative;z-index:1;outline:none;}.simpleTab .tab-content{clear:both;padding:10px;position:relative;z-index:2;border:1px solid #d7d7d7;border-top:3px solid #444444;}.simpleTab ul.tab-wrappers li a.activeTabs{background-color:#444444;z-index:3;}
+</style>
+ <link rel="stylesheet" href="https://cdn.plyr.io/3.5.0/plyr.css" />
+<script src="https://cdn.plyr.io/3.5.0/demo.js" crossorigin="anonymous"></script>
+<script src='http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js' type='text/javascript'></script>
+
+<div class="ijonkztabs">
+<div data-tab="<i class='icon-play'></i> HTML"> 
+<video controls crossorigin playsinline poster="https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-HD.jpg"  id="player"  >
+                        <!-- Video files -->
+<source src="https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-576p.mp4" type="video/mp4"  size="576" />
+<source src="https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-720p.mp4" type="video/mp4" size="720"  />
+<source src="https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-1080p.mp4" type="video/mp4" size="1080"  />
+                    <!-- Caption files -->
+<track kind="captions" label="English" srclang="en"  src="https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-HD.en.vtt" default />
+ <track kind="captions" label="Français" srclang="fr" src="https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-HD.fr.vtt" />
+
+                        <!-- Fallback for browsers that don't support the <video> element -->
+                        <a href="https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-576p.mp4" download >Download</a
+                        >
+                    </video>
+              
+       
+  </div>
+<div data-tab="<i class='icon-play'></i> YOUTUBE"><div id="player" data-plyr-provider="youtube" data-plyr-embed-id="bTqVqk7FSmY"></div></div>
+<div data-tab="<i class='icon-play'></i> VIMEO"><div id="player" data-plyr-provider="vimeo" data-plyr-embed-id="76979871"></div></div>
+  
+</div>
+
+
+
+<script type='text/javascript'>
+//<![CDATA[
+(function(a){a.fn.simpleTab=function(b){b=jQuery.extend({active:1,fx:null,showSpeed:400,hideSpeed:400,showEasing:null,hideEasing:null,show:function(){},hide:function(){},change:function(){}},b);return this.each(function(){var e=a(this),c=e.children("[data-tab]"),d=b.active-1;e.addClass("simpleTab").prepend('<ul class="tab-wrappers"></ul>');c.addClass("tab-content").each(function(){a(this).hide();e.find(".tab-wrappers").append('<li><a href="#">'+a(this).data("tab")+"</a></li>")}).eq(d).show();e.find(".tab-wrappers a").on("click",function(){var f=a(this).parent().index();a(this).closest(".tab-wrappers").find(".activeTabs").removeClass("activeTabs");a(this).addClass("activeTabs");if(b.fx=="slide"){if(c.eq(f).is(":hidden")){c.slideUp(b.hideSpeed,b.hideEasing,function(){b.hide.call(e)}).eq(f).slideDown(b.showSpeed,b.showEasing,function(){b.show.call(e)})}}else{if(b.fx=="fade"){if(c.eq(f).is(":hidden")){c.hide().eq(f).fadeIn(b.showSpeed,b.showEasing,function(){b.show.call(e)})}}else{if(b.fx=="fancyslide"){if(c.eq(f).is(":hidden")){c.slideUp(b.hideSpeed,b.hideEasing,function(){b.hide.call(e)}).eq(f).delay(b.hideSpeed).slideDown(b.showSpeed,b.showEasing,function(){b.show.call(e)})}}else{if(c.eq(f).is(":hidden")){c.hide().eq(f).show()}}}}b.change.call(e);return false}).eq(d).addClass("activeTabs")})}})(jQuery);
+//]]>
+</script>
+<script class='jshilang' type='text/javascript'>
+//<![CDATA[
+$('.ijonkztabs').simpleTab({
+active: 1,
+fx: "fade",
+showSpeed: 400,
+hideSpeed: 400
+});
+//]]>
+</script>
+
+
