--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <style>
 .simpleTab{margin:20px auto;}.simpleTab ul.tab-wrappers{margin:0;padding:0;height: ;line-height:30px;}.simpleTab ul.tab-wrappers li{margin:0;padding:0;float:left;list-style:none;display:inline;}.simpleTab ul.tab-wrappers li a{margin-right:2px;display:block;padding:0 15px;background-color:#000000;color:#cccccc;text-decoration:none;border-bottom:none;position:relative;z-index:1;outline:none;}.simpleTab .tab-content{clear:both;padding:10px;position:relative;z-index:2;border:1px solid #d7d7d7;border-top:3px solid #444444;}.simpleTab ul.tab-wrappers li a.activeTabs{background-color:#444444;z-index:3;}
 </style>
- <link rel="stylesheet" href="https://cdn.plyr.io/3.5.0/plyr.css" />
-<script src="https://cdn.plyr.io/3.5.0/demo.js" crossorigin="anonymous"></script>
-<script src='http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js' type='text/javascript'></script>
+ <link rel="stylesheet" href="https://lyricsbd.github.io/plyr/3.5.1/plyr.css" />
+<link rel="stylesheet" href="https://lyricsbd.github.io/plyr/3.5.1/youtube.css" />
+<script src="https://lyricsbd.github.io/plyr/3.5.1/demo.js" crossorigin="anonymous"></script>
+<script src='https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js' type='text/javascript'></script>
 
 <div class="ijonkztabs">
 <div data-tab="<i class='icon-play'></i> HTML"> 
