--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <style>
-.simpleTab{margin:20px auto;}.simpleTab ul.tab-wrappers{margin:0;padding:0;height: ;line-height:30px;}.simpleTab ul.tab-wrappers li{margin:0;padding:0;float:left;list-style:none;display:inline;}.simpleTab ul.tab-wrappers li a{margin-right:2px;display:block;padding:0 15px;background-color:#000000;color:#cccccc;text-decoration:none;border-bottom:none;position:relative;z-index:1;outline:none;}.simpleTab .tab-content{clear:both;padding:10px;position:relative;z-index:2;border:1px solid #d7d7d7;border-top:3px solid #444444;}.simpleTab ul.tab-wrappers li a.activeTabs{background-color:#444444;z-index:3;}
+.simpleTab{margin:20px auto;background-color:white;}.simpleTab ul.tab-wrappers{margin:0;padding:0;height: ;line-height:30px;}.simpleTab ul.tab-wrappers li{margin:0;padding:0;float:left;list-style:none;display:inline;}.simpleTab ul.tab-wrappers li a{margin-right:2px;display:block;padding:0 15px;background-color:#000000;color:#cccccc;text-decoration:none;border-bottom:none;position:relative;z-index:1;outline:none;}.simpleTab .tab-content{clear:both;padding:10px;position:relative;z-index:2;border:1px solid #d7d7d7;border-top:3px solid #444444;}.simpleTab ul.tab-wrappers li a.activeTabs{background-color:#444444;z-index:3;}
 </style>
 <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js' type='text/javascript'></script>
 <script src='https://code.jquery.com/jquery-3.2.1.min.js'></script>
@@ -21,7 +21,7 @@
     </div>
 	
 <div data-tab="<i class='icon-play'></i> Vimeo">
-<div class="embed-shell"><p data-height="440" data-theme-id="47" data-slug-hash="zegoYj" data-user="pouretrebelle" data-default-tab="js" class='codepen'></div>
+<div class="embed-shell"><p data-height="600" data-theme-id="47" data-slug-hash="zegoYj" data-user="pouretrebelle" data-default-tab="js" class='codepen'></div>
      
           
  </div>
