--- a/tube/index.html
+++ b/tube/index.html
@@ -7,7 +7,7 @@
     
     <body>
     
-
+<!--
 <style>
 
 .plyr--full-ui input[type=range]{
@@ -33,7 +33,7 @@
     height:200%
 }
 
-</style>
+</style> !-->
 <script src='https://lyricsbd.github.io/plyr/tube/plyr.js'></script>
 
 <link rel='stylesheet' href='https://lyricsbd.github.io/plyr/tube/plyr.css'>
