--- a/tube/index.html
+++ b/tube/index.html
@@ -7,38 +7,41 @@
     
     <body>
     
-<!--
+
 <style>
+ 
+  
+.plyr--full-ui input[type=range] {
+ color:#d9534f!important
+}
+.plyr--video .plyr__controls .plyr__control[aria-expanded=true] {
+ background:#d9534f
+}
+.plyr__control--overlaid:hover {
+ background:#d9534f
+}
+.plyr__control--overlaid {
+ background:#d9534f
+}
+.plyr__control:hover {
+ background:#d9534f!important
+}
+.plyr__control--overlaid {
+ padding:15px
+}
+.plyr__video-embed iframe {
+ top:-50%;
+ height:200%
+}
 
-.plyr--full-ui input[type=range]{
-    color:#d9534f!important
-}
-.plyr--video .plyr__controls .plyr__control[aria-expanded=true]{
-    background:#d9534f
-}
-.plyr__control--overlaid:hover{
-    background:#d9534f
-}
-.plyr__control--overlaid{
-    background:#d9534f
-}
-.plyr__control:hover{
-    background:#d9534f!important
-}
-.plyr__control--overlaid{
-    padding:15px
-}
-.plyr__video-embed iframe{
-    top:-50%;
-    height:200%
-}
 
-</style> !-->
+
+</style> 
 <script src='https://lyricsbd.github.io/plyr/tube/plyr.js'></script>
 
 <link rel='stylesheet' href='https://lyricsbd.github.io/plyr/tube/plyr.css'>
 
-<link href="https://lyricsbd.github.io/plyr/tube/logo.css" rel="stylesheet" type="text/css" media="all" />
+<link href="https://lyricsbd.github.io/plyr/tube/ logo.css" rel="stylesheet" type="text/css" media="all" />
 
 <div id="player" data-plyr-provider="youtube" data-plyr-embed-id="PSDy4tirdLE"></div>
 
