--- a/tube/play.html
+++ b/tube/play.html
@@ -31,7 +31,7 @@ var sv = getParam("sv");
   index_of_urlArry = 0;
 </script>
 <script>
-document.write( '<div id=\"player\" data-plyr-provider=\"\'+sv+\'\" data-plyr-embed-id=\"PSDy4tirdLE\"></div>' );
+var myvar = '<div id="player" data-plyr-provider="youtube" data-plyr-embed-id="PSDy4tirdLE">';
 </script>
 <script src="https://cdn.plyr.io/3.4.8 /plyr.js"></script>
 <script>const player = new Plyr('#player', {
