--- a/tube/play.html
+++ b/tube/play.html
@@ -35,7 +35,7 @@ var sv = getParam("sv");
 	    
 <script type="text/javascript">
 <!-- 
-document.writeln("<div id=\"player\" data-plyr-provider=\"youtube\" data-plyr-embed-id=\"'+sv+'\"></div> "); 
+document.writeln("<div id=\"player\" data-plyr-provider=\"youtube\" data-plyr-embed-id=\""+sv+"\"></div> "); 
 document.writeln("  ");
  // -->
 </script>
