--- a/tube/play.html
+++ b/tube/play.html
@@ -4,7 +4,7 @@
 <head> </head>
 
     <style>
-.player{position:absolute;width:100%!important;height:100%!important}
+#player{position:absolute;width:100%!important;height:100%!important}
 </style>
     
     <body>
