--- a/tube/play.html
+++ b/tube/play.html
@@ -4,7 +4,7 @@
 <head> </head>
 
 
-#<style type="text/css">*{margin:0;padding:0}#player{position:absolute;width:100%!important;height:100%!important}</style>
+<style type="text/css">*{margin:0;padding:0}#player{position:absolute;width:100%!important;height:100%!important}</style>
 
     
     <body>
